# PyQt6-Password-Generator

./: README.md  pyproject.toml
password_generator_pyqt6_app/: password_generator.py
tests/: test_password_generator_pyqt6_app.py
